<resources>
    <string name="app_name">Permit Log</string>
    <string name="start_drive">Start Drive</string>
    <string name="stop_drive">Stop Drive</string>
    <string name="time_completed">Time Completed</string>
    <string name="custom_drive_title">Custom Drive</string>
    <string name="edit_drive_title">Edit Drive Log</string>
    <string name="date_label">Date: </string>
    <string name="start_time_label">Start Time: </string>
    <string name="stop_time_label">Stop Time: </string>
    <string name="driver_label">Accompanying Supervisor:</string>
    <string name="night">Night</string>
    <string name="poor_weather">Poor Weather</string>
    <string name="adverse_conds">Adverse Conditions</string>
    <string name="deleted_driver_notice">It seems that the supervisor that you originally set for this log has been deleted. Please set a new supervisor.</string>
    <string name="time_notice">Note that if the ending time is before the starting time, it will be assumed that the drive went into the next day.</string>
    <string name="driver_add_title">Add Supervisor</string>
    <string name="driver_edit_title">Edit Supervisor</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="license_number">License Number</string>
    <string name="driver_age">Supervisor Age</string>
    <string name="no_license_warning">You did not enter a license number for this supervisor. Are you sure you do not want to save the license number?</string>
    <string name="no_license_notice">For privacy reasons, the license number can be left blank.</string>
    <string name="driver_dialog_success">Supervisor successfully saved.</string>
    <string name="driver_dialog_deleted">Supervisor successfully deleted.</string>
    <string name="driver_dialog_error">Please complete all fields.</string>
    <string name="driver_age_error">Supervisor age must be over 21 and less than 117.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_top_desc">Choose your state, or \"Custom\" to enter your own goals. You can edit your goals before you save them, and afterwards. Enter 0 for any value you don\'t want to track.</string>
    <string name="total">Total</string>
    <string name="settings_total_desc">Total Hours:</string>
    <string name="day">Day</string>
    <string name="settings_day_desc">Day Hours:</string>
    <string name="settings_night_desc">Night Hours:</string>
    <string name="settings_weather_desc">Poor Weather Hours:</string>
    <string name="settings_adverse_desc">Adverse Conditions Hours (e.g. night and/or poor weather):</string>
    <string name="button_save">Save</string>
    <string name="settings_success">Goals successfully saved.</string>
    <string name="go_to_add_driver_menu">Please add the supervisor that accompanied you by tapping the plus sign in the bottom right, and tapping "Add Supervisor"</string>
    <string name="save_dialog_content">Select all that apply:</string>
    <string name="drive_saved">Drive successfully saved.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="no_state_error">Please choose a state in the Goals page before exporting your log.</string>
    <string name="save_pdf_error">Unable to export using the Maine format: could not save the PDF.</string>
    <string name="export_pdf_error">Unable to export log using the Maine format: an app that can open PDFs is required.</string>
    <string name="export_xls_error">Unable to export log manually: an app that can open XLS files (i.e. spreadsheets) is required.</string>
    <string name="tutorial_text_intro">Welcome to Permit Log, the app that helps drivers with learner\'s permits record their driving hours!\n\nPlease view this tutorial in portrait mode.</string>
    <string name="tutorial_text_fam">Tap the orange button to add a new supervisor (someone who ALREADY has a license) or to manually enter a drive.</string>
    <string name="tutorial_text_spinner">Before each drive, select the supervisor that is accompanying you here.</string>
    <string name="tutorial_text_start">Then, tap the "Start Drive" button to start the timer.</string>
    <string name="tutorial_text_stop">When you\'re done driving, tap the "Stop Drive" button to stop the timer and the app will record the drive in the driving log.</string>
    <string name="tutorial_text_menu">Tap the menu button in upper-left corner to edit and export the driving log, edit info about the supervisors, and set your goals.\n\nWe hope you enjoy using Permit Log! And remember, don\'t use your phone while driving.\n-Team Redundancy Team</string>
    <string name="tutorial_redirect">You will be now be directed to the goals screen, to enter in the hours required to get your licence. If you don\'t want to set any goals, just press the back button.</string>
    <array name="menu_items">
        <item>Home</item>
        <item>Log</item>
        <item>Supervisors</item>
        <item>Goals</item>
        <item>About</item>
        <item>Sign Out</item>
    </array>
    <string name="network_connection_error">Please connect to the Internet and come back to this app to sign in.</string>
    <string name="unknown_auth_error">For some reason, authentication failed. Please try again.</string>
    <string name="file_provider_authority" translatable="false">team.tr.permitlog.fileprovider</string>

    <!-- Ad unit id -->
    <string name="ad_unit_id">ca-app-pub-1631603318674332/4296343209</string>

    <!-- Facebook login -->
    <string name="facebook_application_id" translatable="false">122448765054184</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb122448765054184</string>
</resources>
