<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_driver_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_top_desc" />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/totalGoalDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_total_desc" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/totalGoalInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/totalGoalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Total"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/dayGoalDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_day_desc" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/dayGoalInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/dayGoalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Day"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/nightGoalDesc"
                android:text="@string/settings_night_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/nightGoalInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/nightGoalEdit"
                    android:hint="Night"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/weatherGoalDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_weather_desc" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/weatherGoalInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/weatherGoalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Weather"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/adverseGoalDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_adverse_desc" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/adverseGoalInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/adverseGoalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Adverse"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right">

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_save"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
