<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driver_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppTheme.Light.NoActionBar"
    tools:context="team.tr.permitlog.DriverDialog"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_gravity="top"
        app:titleTextColor="@android:color/white" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cl_notice_container">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cl_notice"
                    android:text="@string/cl_notice" />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_firstname"
                    android:hint="@string/first_name"
                    android:inputType="textCapWords|textPersonName" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_lastname"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords|textPersonName" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nl_notice_container">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nl_notice"
                    android:text="@string/nl_notice" />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_license"
                    android:hint="@string/license_number"
                    android:inputType="textCapCharacters"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/driver_age"
                    android:hint="@string/driver_age" />
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right">

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_ok"
                    android:onClick="onSaveClick"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_cancel"
                    android:onClick="onCancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/driver_ok" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_delete"
                    android:onClick="onDeleteClick"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/driver_cancel"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
